# w-server

./: .gitignore  CMakeLists.txt  README.md  compile_thrift.sh
bench/: bench_monitor.cpp
cmake_config/: boost.cmake  compression.cmake  encrypt.cmake  facebook.cmake  google.cmake  unwind.cmake  utils.cmake
distribute/: control  run.sh  w-server-service  z-server-service
protocol/: calculator.thrift
scripts/: compile_thrift.sh  generate_version.sh
src/: main.cpp
src/gen-cpp2/: CalculatorService.cpp  CalculatorService.h  CalculatorService.tcc  CalculatorService_client.cpp  CalculatorService_custom_protocol.h  CalculatorService_processmap_compact.cpp  calculator_constants.cpp  calculator_constants.h  calculator_types.cpp  calculator_types.h  calculator_types.tcc
src/http_service/: default_handler.cpp  default_handler.h  handler_factory.cpp  handler_factory.h  monitor_handler.cpp  monitor_handler.h  server.cpp  server.h  version_handler.cpp  version_handler.h
src/monitor/: stats-defs.h  stats.cpp  stats.h
src/thrift_service/: calculator_handler.cpp  calculator_handler.h
src/version/: version.h
test/: test_monitor.cpp  test_thrift.cpp
